--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <link href="/src/index.css" rel="stylesheet">
 </body>
 
 </html>
